@@ -79,6 +79,7 @@ CONFECTION REBAKED -->	Conversions between this mods' moss blocks and Confection
 Manual compability with the 'BIOME SIGHT WALL HIGHLIGHTING' was added.
 
 SPIRIT MOD --> You can use the spirit mod pylons to craft a 'PYLON OF NIGHT'.
+Tile spreading added by this mod is compatible with pureglow flowers.
 
 REMNANTS --> Due to the way Remnants generates it's corruption and crimson, the 'CHASM PURIFICATION UPON HARDMODE' is automatically disabled.
 Additionally, Remnants' Hallow generation avoids jungle grass blocks, this means the Hallowed Jungle cannot generate upon defeating the WoF.
